removed max width and fixed spacing

--- a/1/index.css
+++ b/1/index.css
@@ -26,7 +26,6 @@ body,html {
     font-family: 'Comfortaa', cursive;
     font-size: 18px;
     width: 80%;
-    max-width: 800px;
     background-color: black;
     border: 1px solid #d2d431;
     border-radius: 8px;
